--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"
-        android:text="MyMobiBook"
+        android:text="MobiBook"
         android:textAllCaps="false"
         android:textColor="@color/purple_500"
         android:textSize="50sp"
