--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,6 +12,7 @@
         android:id="@+id/bnbDashboard"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        android:layout_marginBottom="10dp"
         android:background="@color/white"
         app:cnb_menuResource="@menu/botnavbar_menu"
         app:layout_constraintBottom_toBottomOf="parent"
