--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.MyMobiBook" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
@@ -13,4 +13,5 @@
         <item name="android:statusBarColor" >@android:color/transparent</item>
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
